src/test/resources/semantic_errors/printInt_with_string.notc
void main() {
    string s = "hey";
    printInt(s);
}
